# llmFlight

./: .gitattributes  .gitignore  API_KEYS.py  README.md  install-linux.py  install-linux.sh  install-windows.bat  install-windows.py  launch-webui-linux.sh  launch-webui-windows.bat  requirements.txt  sync.ffs_db
Scripts/arkDLtools/: MANIFEST.in  NOTICE  README.md  dltools.py  pyproject.toml
Scripts/arkDLtools/old/: dltools_v_0_24_4_3.py  dltools_v_0_24_5_0.py  dltools_v_0_24_7_8.py
Scripts/arkDLtools/src/arkDLtools/: dltools.py
Scripts/arkDLtools/src/arkDLtools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Scripts/packer/: packer.py
dataset/: Describe.ipynb  ENai_answers.ipynb  ENembeddings.ipynb  cut.ipynb  test_questions.csv
embedding_models/: text_embedding_3_small.py
llm_models/: gpt_3_5_turbo_0125.ipynb  gpt_3_5_turbo_0125.py
main_models/LiHuNet3072-v1-turbo/: train.ipynb
models/LiHuNet3072-v1-turbo/: dtools.py  evaluate.ipynb  inference.py  train.ipynb
specialized_models/emotion_Dou/: DataProcess.ipynb  emotion_Dou.py  emotion_Dou_202406051604.pkl  inference.py  train.ipynb
specialized_models/emotional_coherence/: emotional_coherence.py  train.ipynb
specialized_models/sentences_length/: DataProcess.ipynb  inference.py  sentences_length.py  sentences_length_202406051750.pkl  train.ipynb
specialized_models/words_richness/: DataProcess.ipynb  inference.py  train.ipynb  words_richness.py  words_richness_202406051735.pkl
webui/: AIContentDetector-202405101424.py  AIContentDetector.py  settings.py  test.ipynb
webui/examples/: chatgpt.txt  (+1 more)
(+12 files in other folders)
